<resources>
    <!-- System -->
    <string name="scheme" translatable="false">https://</string>
    <string name="host" translatable="false">vote-me.com</string>
    <string name="path" translatable="false">/votes/</string>
    <string name="app_name">VoteMe</string>
    <string name="action_settings">Settings</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="login">Sign In</string>
    <string name="registration">Sign Up</string>
    <string name="signIn">Sign In...</string>
    <string name="signUp">Sign Up...</string>
    <string name="title_activity_votes" translatable="false">VotesActivity</string>
    <string name="tab_text_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <string name="tab_text_3" translatable="false">Tab 3</string>
    <string name="logout">Log Out</string>
    <string name="signOut">Sign Out</string>
    <string name="all_votes">All votes</string>
    <string name="my_votes">My Votes</string>
    <string name="new_vote">New vote</string>
    <string name="input_vote_title">Input tile of vote</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="add_vote">Add vote</string>
    <string name="please_input_vote_title">Please, input title</string>
    <string name="two_variants">Must be at least two variants</string>
    <string name="choose">Choose</string>
    <string name="join_vote">Join vote by link</string>
    <string name="confirm_logout">Do you want logout?</string>
    <string name="input_link">Input vote link</string>
    <string name="copy_link">Copy link</string>
    <string name="id" translatable="false">ID</string>
    <string name="set_up_a_vote">Set up a vote</string>
    <string name="vote_again">Users can vote again</string>
    <string name="open_results">Open results, even user didn\'t vote</string>
    <string name="make_choise">Select one of the options</string>
    <string name="select_option">Please, choose a variant</string>
    <string name="input_valid_email">Input valid email</string>
    <string name="input_valid_password">Password length must be 6 or bigger</string>
    <string name="sign_up_completed">Sign Up completed!</string>
    <string name="email_verif_msg">To verify your account, check your e-mail for verification letter.</string>
    <string name="vote_creating_condition">Verify your account to create new vote</string>
    <string name="empty_all_votes">Create new vote or join to existed</string>
    <string name="empty_my_votes">Create new vote</string>
    <string name="dont_remember_password">Don\'t remember password?</string>
    <string name="restore_password">Restore password</string>
    <string name="restore_password_msg">Input your account e-mail address, where restoration letter will be sended</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="password_changed">Password changed</string>
    <string name="variants">variants</string>
    <string name="totalVotes">Total votes :</string>
    <string name="send_confirmation_letter">Send confirmation letter</string>
    <string name="do_you_want_send_confirm_email">Do you want send a letter?</string>
    <string name="email_verif_title">Email verification</string>
    <string name="success_email_verif">Letter successfully sended. Check your e-mail</string>
    <string name="failure_email_verif">Failure sending</string>
    <string name="info">Info</string>
    <string name="version">Version  </string>
    <string name="number_of_version" translatable="false">1.0</string>
    <string name="info_title">About application</string>
    <!-- Errors -->
    <string name="error_wrong_password">Wrong password</string>
    <string name="error_user_not_found">User with given email doesn\'t exist</string>
    <string name="error_network">Network error. Check your connection and try again</string>
    <string name="error_email_already_in_use">Another account uses this email. Try another address</string>
    <string name="different_passwords">Different passwords</string>
    <string name="unique_option">Please, input unique option</string>
    <string name="link_copied">Link copied ot clipboard</string>
    <string name="leave_vote">Leave vote</string>
    <string name="leave_vote_title">Leave the vote?</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
