<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/account">
        <com.example.android.voteme.settings.ChangePasswordDialog
            android:key="change_pass"
            android:title="@string/change_password">
        </com.example.android.voteme.settings.ChangePasswordDialog>
        <com.example.android.voteme.settings.EmailVerificationDialog
            android:key="user_email"
            android:title="@string/send_confirmation_letter"
            ></com.example.android.voteme.settings.EmailVerificationDialog>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/info">
        <com.example.android.voteme.settings.InfoDialog
            android:key="app_info"
            android:title="@string/info_title">

        </com.example.android.voteme.settings.InfoDialog>
    </PreferenceCategory>
</PreferenceScreen>