<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:layout_height="match_parent">
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/old_password"
    android:layout_marginLeft="8dp"
    android:inputType="textPassword"
    android:layout_marginRight="8dp"
    android:id="@+id/old_password"/>
<EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:hint="@string/new_password"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:inputType="textPassword"
    android:id="@+id/new_password"/>
<EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:hint="@string/repeat_password"
    android:layout_marginLeft="8dp"
    android:inputType="textPassword"
    android:layout_marginRight="8dp"
    android:id="@+id/new_password_confirm"/>

    <ProgressBar
        android:id="@+id/loadingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true"/>
</LinearLayout>